--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -57,7 +57,7 @@ invert-color-include = [ ];
 glx-copy-from-front = false;
 glx-swap-method = "undefined";
 
-#opacity-rule = [ 
+opacity-rule = [ 
 #"99:name *?= 'Call'", 
 #"99:class_g = 'Chromium'", 
 #"99:name *?= 'Conky'", 
@@ -83,10 +83,12 @@ glx-swap-method = "undefined";
 #"99:class_g = 'VirtualBox'", 
 #"99:name *?= 'VLC'", 
 #"99:name *?= 'Write'", 
+"90:class_g *?= 'surf'", 
+"90:class_g *?= 'tabbed'", 
 #"93:class_g = 'URxvt' && !_NET_WM_STATE@:32a", 
 #"0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'", 
 #"96:_NET_WM_STATE@:32a *= '_NET_WM_STATE_STICKY'" 
-#];
+];
 
 wintypes : 
 {
