--- a/.i3/config
+++ b/.i3/config
@@ -146,14 +146,14 @@ bindsym $mod+Shift+f exec flameshot gui
 # to display names or symbols instead of plain workspace numbers you can use
 # something like: set $ws1 1:mail
 #                 set $ws2 2:
-set $ws1 1
-set $ws2 2
-set $ws3 3
-set $ws4 4
+set $ws1 "1: "
+set $ws2 "2: "
+set $ws3 "3: "
+set $ws4 "4: "
 set $ws5 5
 set $ws6 6
 set $ws7 7
-set $ws8 8
+set $ws8 "8: "
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
@@ -388,7 +388,7 @@ gaps outer -2
 # gaps outer all plus 5
 
 # Smart gaps (gaps used if only more than one container on the workspace)
-smart_gaps on
+#smart_gaps on
 
 # Smart borders (draw borders around container only if it is not the only container on this workspace) 
 # on|no_gaps (on=always activate and no_gaps=only activate if the gap size to the edge of the screen is 0)
