Add alacritty config file

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -85,6 +85,7 @@ opacity-rule = [
 #"99:name *?= 'Write'", 
 "90:class_g *?= 'surf'", 
 "90:class_g *?= 'tabbed'", 
+"90:class_g *?= 'qutebrowser'", 
 #"93:class_g = 'URxvt' && !_NET_WM_STATE@:32a", 
 #"0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'", 
 #"96:_NET_WM_STATE@:32a *= '_NET_WM_STATE_STICKY'" 
