Added custom bash script to mount remote folders with ssfs

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -49,7 +49,7 @@ unredir-if-possible = true;
 refresh-rate = 0;
 vsync = "none";
 dbe = false;
-paint-on-overlay = true;
+#paint-on-overlay = true;
 focus-exclude = [ "class_g = 'Cairo-clock'" ];
 detect-transient = true;
 detect-client-leader = true;
