--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -104,7 +104,7 @@ set colorscheme default
 # Preview files on the rightmost column?
 # And collapse (shrink) the last column if there is nothing to preview?
 set preview_files true
-set preview_directories true
+set previe_directories true
 set collapse_preview true
 
 # Save the console history on exit?
@@ -618,4 +618,4 @@ copytmap <ESC> q Q w <C-c>
 default_linemode devicons
 
 # find
-map <C-f> fzf_select
+map <C-f> fzf_selectw
