--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -17,11 +17,15 @@
 ;==========================================================
 
 [colors]
-
-background = ${xrdb:background:#000000}
-color1 = ${xrdb:color1:#ff5555}
-color2 = ${xrdb:color4:#ff5555}
-color3 = ${xrdb:color7:#ff5555}
+background = ${xrdb:background}
+foreground = ${xrdb:foreground}
+color1 = ${xrdb:color1}
+color2 = ${xrdb:color2}
+color3 = ${xrdb:color3}
+color4 = ${xrdb:color4}
+color5 = ${xrdb:color5}
+color6 = ${xrdb:color6}
+color7 = ${xrdb:color7}
 
 ;  _                    
 ; | |__   __ _ _ __ ___ 
@@ -31,29 +35,27 @@ color3 = ${xrdb:color7:#ff5555}
 
 [bar/bar]
 enable-ipc=true
-height = 35
+height = 30
 width = 100%
 bottom = true
 
 background = ${colors.background}
-;background = ${colors.primary}
-foreground = ${colors.color1}
+foreground = ${colors.foreground}
 
 line-size = 2
 
-font-0=Iosevka:size=10;3
-font-1=Font Awesome 5 Free Solid:size=8;3
-font-2=Font Awesome 5 Free Regular:size=8;3
-font-3=Font Awesome 5 Brands:size=8;3
-font-4=font\-logos:size=11;3
-font-5=IPAGothic:size=11:antialias=true;3
+font-0 = "URWGothic-Book:size=10"
+font-1 = "Font Awesome 5 Free:style=Solid:pixelsize=11"
+font-2 = "Font Awesome 5 Free:style=Regular:pixelsize=11"
+font-3 = "Font Awesome 5 Brands:pixelsize=11"
+font-4 = font\-logos:size=16;3
+font-5 = "DejaVu Sans Mono:size=11"
 
 modules-left = launcher i3 
-; Spotify (scripts at github.com/dietervanhoof/polybar-spotify-controls)
-modules-center = previous playpause next Spotify
-; Mpd
-; modules-center = mpd
-modules-right = vpn-openvpn temperature cpu memory updates time pulseaudio wlan power battery
+;Spotify (scripts at github.com/dietervanhoof/polybar-spotify-controls)
+;modules-center = previous playpause next spotify
+modules-center = time
+modules-right = vpn-openvpn temperature cpu memory updates pulseaudio wlan power battery
 
 scroll-up = i3wm-wsnext
 scroll-down = i3wm-wsprev
@@ -71,22 +73,21 @@ override-redirect = false
 type=custom/text
 content = 
 content-font=5
-content-foreground=${colors.color1}
+content-foreground=${colors.color4}
 content-padding=2
-click-left=launcher
-;The script above is to be found here : https://github.com/ngynLk/scripts
+click-left=bash /home/lepepe/.config/polybar/launcher.sh
 
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:40:...%
-label-color1 = ${colors.color1} 
+label-color1 = ${colors.color4} 
 label-background = ${colors.background} 
 label-padding = 2
 
 [module/i3]
 type = internal/i3
 format = <label-state> <label-mode>
-format-foreground = ${colors.color1}
+format-foreground = ${colors.color4}
 format-background = ${colors.background}
 index-sort = true
 
@@ -94,7 +95,7 @@ enable-click = true
 reverse-scroll = false
 
 label-focused = %index%
-label-focused-overline = ${colors.color1}
+label-focused-overline = ${colors.color4}
 label-focused-padding = 2
 
 label-unfocused = %index%
@@ -116,7 +117,7 @@ label-urgent-font = 2
 [module/power]
 type = custom/text
 content = 
-content-foreground = ${colors.color3}
+content-foreground = ${colors.foreground}
 click-left = powermenu
 ;The script above is to be found here : https://github.com/ngynLk/scripts
 content-padding = 2
@@ -127,19 +128,19 @@ host = 127.0.0.1
 port = 6600
 format-online = <icon-prev> <toggle> <icon-next> <label-song> <label-time>
 format-online-padding = 2
-format-online-foreground = ${colors.color2}
+format-online-foreground = ${colors.color4}
 format-online-background = ${colors.background}
-label-song-foreground = ${colors.color2}
+label-song-foreground = ${colors.color4}
 label-song-background = ${colors.background}
 label-song-padding = 2
-label-time-foreground = ${colors.color2}
+label-time-foreground = ${colors.color4}
 label-time-background = ${colors.background}
 label-time-padding = 1
 
 format-offline = <label-offline>
 label-offline =  offline
 format-offline-padding = 2
-format-offline-foreground = ${colors.color2}
+format-offline-foreground = ${colors.color4}
 format-offline-background = ${colors.background}
 
 bar-progress-width = 35
@@ -152,11 +153,6 @@ icon-stop = 
 icon-play = 
 icon-pause = 
 icon-next = 
-;icon-prev = 
-;icon-stop = 
-;icon-play = 
-;icon-pause = 
-;icon-next = 
 
 label-song-maxlen = 75
 label-song-ellipsis = true
@@ -166,7 +162,7 @@ type = internal/cpu
 interval = 2
 format-prefix = " "
 format-padding = 2
-format-foreground = ${colors.color3}
+format-foreground = ${colors.foreground}
 label = %percentage%%
 
 [module/memory]
@@ -174,44 +170,38 @@ type = internal/memory
 interval = 2
 format-padding = 2
 format-prefix = " "
-format-foreground = ${colors.color3}
+format-foreground = ${colors.foreground}
 label = %percentage_used%%
+click-left = $TERMINAL -e htop &
 
 [module/wlan]
 type = internal/network
-interface = wlp3s0
+interface = wlp5s0
 interval = 3.0
 
 format-connected =  <label-connected>
 label-connected = %essid%
-label-connected-color1 = ${colors.color1}
 
-;format-disconnected =
 format-disconnected = <label-disconnected>
 label-disconnected = %ifname% disconnected
-label-disconnected-color1 = ${colors.color1}
 
 ramp-signal-0 = 
 ramp-signal-1 = 
 ramp-signal-2 = 
 ramp-signal-3 = 
 ramp-signal-4 = 
-ramp-signal-color1 = ${colors.color1}
 
 [module/eth]
 type = internal/network
-interface = enp2s0
+interface = enp6s0
 interval = 3.0
 
 format-connected-prefix = " "
-format-connected-prefix-color1 = ${colors.color1-alt}
+format-connected-prefix-color1 = ${colors.color2}
 label-connected = %local_ip%
 
-format-disconnected =
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-color1 = ${colors.color1-alt}
+format-disconnected = <label-disconnected>
+label-disconnected = %ifname% disconnected
 
 [module/time]
 type = internal/date
@@ -222,7 +212,7 @@ time = "%H:%M"
 date = "%d %b"
 
 label =  %date%, %time%
-label-foreground = ${colors.color3}
+label-foreground = ${colors.foreground}
 label-background = ${colors.background}
 label-padding = 2
 
@@ -233,7 +223,7 @@ type = internal/pulseaudio
 format-margin = 1
 format-volume = <ramp-volume><label-volume>
 label-volume = %percentage:3:3%%
-format-volume-foreground = ${colors.color3}
+format-volume-foreground = ${colors.foreground}
 format-volume-background = ${colors.background}
 format-volume-padding = 2
 use-ui-max = false
@@ -243,10 +233,9 @@ ramp-volume-0 = ""
 ramp-volume-1 = ""
 ramp-volume-2 = ""
 
-
 label-muted = ""   
 label-muted-background = ${colors.background}
-label-muted-foreground = ${colors.color3}
+label-muted-foreground = ${colors.foreground}
 label-muted-padding = 2
 
 [module/temperature]
@@ -254,16 +243,18 @@ type = internal/temperature
 thermal-zone = 0
 warn-temperature = 60
 
-format =  <label>
+format =  <ramp> <label>
+format-foreground = ${colors.foreground}
 format-warn = <ramp> <label-warn>
 
 label = %temperature-c%
 label-warn = %temperature-c%
-label-warn-color1 = ${colors.secondary}
+label-warn-color1 = ${colors.color1}
 
 ramp-0 = 
 ramp-1 = 
 ramp-2 = 
+ramp-foreground = ${colors.foreground}
 
 [module/powermenu]
 type = custom/menu
@@ -273,7 +264,7 @@ expand-right = true
 format-spacing = 1
 format-margin = 0
 format-background = ${colors.background}
-format-foreground = ${colors.color3}
+format-foreground = ${colors.foreground}
 format-padding = 2
 
 label-open = 
@@ -305,7 +296,7 @@ menu-1-0-exec = i3-msg exit || openbox --exit
 type = custom/script
 format-font = 2
 format-padding = 2
-format-foreground = ${colors.color2}
+format-foreground = ${colors.color4}
 exec = echo ""
 exec-if = "pgrep spotify"
 click-left = "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous"
@@ -315,7 +306,7 @@ click-left = "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org
 type = custom/script
 format-font = 2
 format-padding = 2
-format-foreground = ${colors.color2}
+format-foreground = ${colors.color4}
 exec = echo ""
 exec-if = "pgrep spotify"
 click-left = "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next"
@@ -324,7 +315,7 @@ click-left = "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org
 type = custom/ipc
 format-font = 2
 format-padding = 0
-format-foreground = ${colors.color2}
+format-foreground = ${colors.color4}
 ; Default
 hook-0 = echo ""
 ; Playing
@@ -334,10 +325,9 @@ hook-2 = echo ""
 initial = 2
 click-left = "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause"
 
-
 [module/spotify]
 type = custom/script
-format-foreground = ${colors.color2}
+format-foreground = ${colors.color4}
 ; Default
 hook-0 = echo ""
 ; Playing/paused show song name and artist
@@ -346,13 +336,13 @@ exec = python $HOME/.config/polybar/spotify.py
 initial = 2
 click-left = i3-msg '[class="Spotify"] focus'
 
-
 [module/updates]
 type = custom/script
 format-prefix = "  "
 exec = bash ~/polybar-scripts/updates-arch-combined.sh
 interval = 600
-format-foreground = ${colors.color3}
+format-foreground = ${colors.foreground}
+click-left = bash ~/.config/polybar/update-packages.sh
 
 [module/battery]
 type = internal/battery
@@ -367,7 +357,7 @@ type = custom/script
 format-prefix = "  "
 exec = bash ~/polybar-scripts/vpn-openvpn-isrunning.sh
 interval = 5
-format-foreground = ${colors.color3}
+format-foreground = ${colors.foreground}
 format-padding = 2
 
 [settings]
@@ -383,4 +373,3 @@ margin-top = 0
 margin-bottom = 0
 
 ; vim:ft=dosini
-                      
