Update qtile config and wlan interface

--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -177,7 +177,7 @@ click-left = $TERMINAL -e htop &
 
 [module/wlan]
 type = internal/network
-interface = wlp5s0
+interface = wlp0s20f3
 interval = 3.0
 
 format-connected =  <label-connected>
