--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -187,37 +187,8 @@ font:
   # Colors which should be used to draw the selection area. If selection
   # background is unset, selection color will be the inverse of the cell colors.
   # If only text is unset the cell text color will remain the same.
-  selection:
-    text: '0xf8f8f2'
-    background: '0x44475a'
-
-  colors:
-    # Default colors
-    primary:
-      background: '0x282a36'
-      foreground: '0xf8f8f2'
-
-    # Normal colors
-    normal:
-      black:   '0x000000'
-      red:     '0xff5555'
-      green:   '0x50fa7b'
-      yellow:  '0xf1fa8c'
-      blue:    '0xbd93f9'
-      magenta: '0xff79c6'
-      cyan:    '0x8be9fd'
-      white:   '0xbfbfbf'
-
-    # Bright colors
-    bright:
-      black:   '0x4d4d4d'
-      red:     '0xff6e67'
-      green:   '0x5af78e'
-      yellow:  '0xf4f99d'
-      blue:    '0xcaa9fa'
-      magenta: '0xff92d0'
-      cyan:    '0x9aedfe'
-      white:   '0xe6e6e6'
+  import:
+  - ~/.config/alacritty/dracula.yml
 
   # Indexed Colors
   #
