--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -47,7 +47,7 @@ mark-ovredir-focused = true;
 detect-client-opacity = true;
 unredir-if-possible = true;
 refresh-rate = 0;
-vsync = "none";
+vsync = 0;
 dbe = false;
 #paint-on-overlay = true;
 focus-exclude = [ "class_g = 'Cairo-clock'" ];
@@ -55,7 +55,7 @@ detect-transient = true;
 detect-client-leader = true;
 invert-color-include = [ ];
 glx-copy-from-front = false;
-glx-swap-method = "undefined";
+#glx-swap-method = "undefined"; ### REMOVED ###
 
 opacity-rule = [ 
 #"99:name *?= 'Call'", 
