--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -232,7 +232,8 @@ font:
 # The value `0.0` is completely transparent and `1.0` is opaque.
 # background_opacity: 1.0
 #background_opacity: 0.90
-window.opacity: 0.90
+  window:
+     opacity: 0.8
 
 #selection:
   #semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
